--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -99,7 +99,8 @@ jobs:
       - run:
           name: Install the tool
           command: |
-            sudo python3 -m pip install -I -U --no-cache-dir lizard==`cat lizardVersion`
+            sudo apt-get -y install python3-pip
+            sudo python3 -m pip install -I -U --no-cache-dir lizard==`cat .lizard-version`
       - run:
           name: Test
           command: ./scripts/test.sh
