--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -130,7 +130,7 @@ jobs:
           name: Lint
           command: ./scripts/lint.sh
 
-  publish:
+  publish_locally:
     machine: true
     environment:
       <<: *host_environment_defaults
@@ -143,6 +143,17 @@ jobs:
       - run:
           name: Publish local docker
           command: ./scripts/publish.sh 0.1.$CIRCLE_BUILD_NUM
+
+  publish_dockerhub:
+    machine: true
+    environment:
+      <<: *host_environment_defaults
+    working_directory: ~/workdir
+    steps:
+      - *restore_source_code
+      - *setup_dependencies_key
+      - *restore_dependencies
+      - *restore_build
       - deploy:
           name: Push docker to DockerHub
           command: |
@@ -170,10 +181,14 @@ workflows:
       - lint:
           requires:
             - compile
-      - publish:
+      - publish_locally:
+          requires:
+            - compile
+      - publish_dockerhub:
           requires:
             - test
             - lint
+            - publish_locally
           filters:
             branches:
               only:
